k8s/booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: anandpskerala/booking-service:v1.0.9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5005
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  type: ClusterIP
  selector:
    app: booking-service
  ports:
    - port: 5005
      targetPort: 5005
