k8s/event-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: anandpskerala/event-service:v1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5003
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: event-service
spec:
  type: ClusterIP
  selector:
    app: event-service
  ports:
    - port: 5003
      targetPort: 5003
