k8s/message-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
        - name: message-service
          image: anandpskerala/message-service:v1.0.9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5004
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: message-service
spec:
  type: ClusterIP
  selector:
    app: message-service
  ports:
    - port: 5004
      targetPort: 5004
